--- a/TeamCores.Web/Views/Questions/Edit.cshtml
+++ b/TeamCores.Web/Views/Questions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     ViewData["Title"] = "编辑考题";
 }
 @section head_script
@@ -90,7 +90,7 @@
     </i-form>
 </div>
 @section title_actions{
-    <i-button type="success" v-on:click="goList">返回列表</i-button>
+    <i-button type="success" v-on:click="goBack('/questions/index')">返回</i-button>
 }
 @section page_script{
     <script>
@@ -152,12 +152,6 @@
             },
             methods: {
                 /**
-                 * 返回列表
-                 */
-                goList() {
-                    location = "/questions/index";
-                },
-                /**
                  * 获取考题详情
                  */
                 getQuestion() {
@@ -171,12 +165,12 @@
                             if (!data.Error) {
                                 this.question = data.Data;
                                 this.compileAnswer();
-                            } else {
-                                this.$Message.error(data.Message);
+							} else {
+								apiError(data.Code, data.Message);
                             }
                         },
                         error: (error) => {
-                            this.$Message.error('操作失败，请重试！');
+							apiError(null,'操作失败，请重试！');
                         }
                     });
                 },
@@ -355,7 +349,6 @@
                  * 获取所有的课程
                  */
                 getCourses() {
-                    var _this = this;
                     Ajax.post({
                         url: "/api/course/search",
                         data: {
@@ -364,12 +357,15 @@
                         },
                         success: (response) => {
                             var data = response.data;
-                            if (!data.Error) {
-                                const pager = data.Data;
-                                _this.courses = pager.Table;
-                            }
+							if (!data.Error) {
+								const pager = data.Data;
+								this.courses = pager.Table;
+							} else {
+								this.$Message.error(data.Message);
+							}
                         },
-                        error: (error) => {
+						error: (error) => {
+							apiError(null, "加载课程数据失败，请重试！");
                         }
                     });
                 },
