--- a/TeamCores.Web/Views/Subjects/Index.cshtml
+++ b/TeamCores.Web/Views/Subjects/Index.cshtml
@@ -50,7 +50,7 @@
                         key: 'Name',
                         title: '名称'
                     },
-                    { key: 'Count', title: '数量' },
+                    { key: 'Count', title: '课程数' },
                     {
                         key: 'Status',
                         title: '状态',
