--- a/TeamCores.Web/Views/Course/Details.cshtml
+++ b/TeamCores.Web/Views/Course/Details.cshtml
@@ -3,7 +3,7 @@
 	ViewData["Title"] = "课程详情";
 }
 
-<template v-if="hasAccess && details != null">
+<template v-if="details != null">
 	<dl class="dl-label-w100 mt30">
 		<template v-if="details.Image!=''">
 			<dt>封面</dt>
@@ -30,12 +30,9 @@
 		</dd>
 	</dl>
 </template>
-<template v-if="!hasAccess">
-	<p class="error-tip">无访问权限</p>
-</template>
 
 @section title_actions{
-	<i-button type="success" v-on:click="goBack">返回</i-button>
+	<i-button type="success" v-on:click="goBack('/course/index')">返回</i-button>
 }
 
 @section page_script{
@@ -43,8 +40,6 @@
 		var vm = new Vue({
 			el: '#content',
             data: {
-				//是否有访问权限
-                hasAccess: true,
 				//详细信息内容结构
 				details: {
                     CourseId: 0,
@@ -88,20 +83,9 @@
                 this.details.CourseId = @(Html.Raw("'" + Html.ViewContext.RouteData.Values["id"] + "'"));
 
 				// 获取课程详细信息
-				this.getDetails();
+				this.loadDetails();
 			},
             methods: {
-                /**
-                 * 返回
-                 */
-				goBack() {
-					var referrer = document.referrer;
-					if (referrer != null || referrer != '') {
-						location = referrer;
-					} else {
-						location = '/course/index';
-					}
-				},
 				/**
 				 * 章节点击事件
 				 */
@@ -111,7 +95,7 @@
 				/**
 				 * 获取课程详细信息
 				 */
-                getDetails() {
+				loadDetails() {
                     var _this = this;
                     Ajax.get({
                         url: '/api/course/details/' + this.details.CourseId,
@@ -121,17 +105,13 @@
 								this.details = data.Data;
 							} else {
 								this.details = null;
-                                this.$Message.error(data.Message);
 
-                                //权限不足
-                                if (data.Code === ApiResult.NO_ACCESS.toString("name")) {
-                                    _this.hasAccess = false;
-                                }
+								apiError(data.Code, data.Message);
 							}
 						},
                         error: (error) => {
 							this.details == null;
-							this.$Message.error('请求数据失败，请重试！');
+							apiError(null,'请求数据失败，请重试！');
 						}
 					});
 				},
