--- a/TeamCores.Web/Views/Exams/ReviewCenter.cshtml
+++ b/TeamCores.Web/Views/Exams/ReviewCenter.cshtml
@@ -221,11 +221,11 @@
 
 								this.queries["total"] = result.Count;
 							} else {
-								apiError(data.Code);
+								apiError(data.Code, data.Message);
 							}
 						},
 						error: (error) => {
-							this.$Message.error("加载数据失败，请重试");
+							apiError(null,"加载数据失败，请重试");
 						}
 					});
 				}
