--- a/TeamCores.Web/Views/Exams/TestList.cshtml
+++ b/TeamCores.Web/Views/Exams/TestList.cshtml
@@ -3,7 +3,7 @@
 	ViewData["Title"] = "考卷中心";
 }
 
-<div id="course_list">
+<div>
 	<div class="searcher">
 		<span>
 			关键字：
@@ -32,7 +32,7 @@
 	</Page>
 </div>
 @section title_actions{
-	<i-button type="success" v-on:click="goMyExams">我的考卷</i-button>
+	<i-button type="success" v-on:click="goTo('/exams/mytestlist')">我的考卷</i-button>
 }
 @section page_script{
 	<script>
@@ -213,7 +213,12 @@
 							var data = response.data;
 							if (!data.Error) {
 								this.courses = data.Data;
+							} else {
+								this.$Message.error(data.Message);
 							}
+						},
+						error: (error) => {
+							this.$Message.error("获取课程信息失败，请重试！");
 						}
 					});
 				},
@@ -241,17 +246,13 @@
 
 								this.queries["total"] = pager.Count;
 							} else {
-								apiError(data.Code);
+								apiError(data.Code, data.Message);
 							}
+						},
+						error: (error) => {
+							apiError(data.Code, "数据加载失败，请重试！");
 						}
 					});
-				},
-
-                /**
-                 * 跳转到我的考卷列表
-                */
-				goMyExams() {
-					location = '/exams/mytestlist';
 				}
 			}
 		});
