--- a/TeamCores.Web/Views/Questions/Index.cshtml
+++ b/TeamCores.Web/Views/Questions/Index.cshtml
@@ -31,7 +31,7 @@
     </Page>
 </div>
 @section title_actions{
-    <i-button type="success" v-on:click="goAdd">新增</i-button>
+    <i-button type="success" v-on:click="goTo('/questions/add')">新增</i-button>
 }
 
 
@@ -222,12 +222,16 @@
                         success : (response) =>
                         {
                             var data = response.data;
-                            if(!data.Error)
-                            {
-                                const pager = data.Data;
-                                this.courses = pager.Table;
-                            }
-                        }
+							if (!data.Error) {
+								const pager = data.Data;
+								this.courses = pager.Table;
+							} else {
+								this.$Message.error(data.Message);
+							}
+						},
+						error: (error) => {
+							this.$Message.error("加载课程数据失败，请重试！");
+						}
                     });
                 },
                 /**
@@ -236,10 +240,9 @@
                  */
                 findCourseName(courseId)
                 {
-                    const _this = this;
-                    const find = _this.courses &&
-                        _this.courses.length > 0 &&
-                        _this.courses.find((item) =>
+                    const find = this.courses &&
+                        this.courses.length > 0 &&
+                        this.courses.find((item) =>
                         {
                             return item.CourseId == courseId;
                         });
@@ -271,18 +274,13 @@
 
 								this.queries["total"] = pager.Count;
 							} else {
-								apiError(data.Code);
+								apiError(data.Code,data.Message);
 							}
-                        }
+						},
+						error: (error) => {
+							apiError(null, "加载数据失败，请重试！");
+						}
                     });
-                },
-
-                /**
-                 * 跳转到新增页面
-                */
-                goAdd()
-                {
-                    location = '/questions/add';
                 },
                 /**
                  * 跳转到编辑页面
