--- a/TeamCores.Web/Views/StudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/StudyPlan/Details.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "学习计划详情";
 }
 
-<template v-if="hasAccess && details!=null">
+<template v-if="details!=null">
     <dl class="dl-label-w100 mt30">
         <dt>标题</dt>
         <dd>{{ details.Title }}</dd>
@@ -29,12 +29,9 @@
         </dd>
     </dl>
 </template>
-<template v-if="!hasAccess">
-    <p class="error-tip">无访问权限</p>
-</template>
 
 @section title_actions{
-    <i-button type="success" v-on:click="goList">返回列表</i-button>
+    <i-button type="success" v-on:click="goBack('/studyplan/index?tab=plans')">返回</i-button>
 }
 
 @section page_script{
@@ -42,8 +39,6 @@
 		var vm = new Vue({
 			el: '#content',
             data: {
-				//是否有访问权限
-                hasAccess: true,
                 //课程展示字段
                 courseColumns: [
                     { title: 'NO.', key: "Sort", width:80},
@@ -145,10 +140,6 @@
 				this.getDetails();
 			},
             methods: {
-                // 返回列表
-                goList() {
-					goBack("/studyplan/index?tab=plans");
-                },
                 /**
                  * 获取学员信息
                  * @@param {String} email 邮箱
@@ -177,7 +168,6 @@
 				 * 获取学习计划详细信息
 				 */
                 getDetails() {
-                    var _this = this;
 					Ajax.get({
                         url: '/api/studyplan/details/' + this.details.PlanId,
                         success: (response) => {
@@ -185,18 +175,14 @@
 							if (!data.Error) {
 								this.details = data.Data;
 							} else {
-								this.details == null;
-                                this.$Message.error(data.Message);
+								this.details = null;
 
-                                //权限不足
-                                if (data.Code === ApiResult.NO_ACCESS.toString("name")) {
-                                    _this.hasAccess = false;
-                                }
+								apiError(data.Code, data.Message);
 							}
 						},
                         error: (error) => {
-							this.details == null;
-							this.$Message.error('请求数据失败，请重试！');
+							this.details = null;
+							apiError(null, '请求数据失败，请重试！');
 						}
 					});
 				}
