--- a/TeamCores.Web/Views/StudyPlan/Student.cshtml
+++ b/TeamCores.Web/Views/StudyPlan/Student.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "学员学习情况";
 }
 
-<template v-if="hasAccess && details!=null">
+<template v-if="details!=null">
     <div class="info-box">
         <div class="info-title indent-10">学员信息</div>
         <dl class="dl-label-w100 mt30">
@@ -53,12 +53,9 @@
         </dl>
     </div>
 </template>
-<template v-if="!hasAccess">
-    <p class="error-tip">无访问权限</p>
-</template>
 
 @section title_actions{
-    <i-button type="success" v-on:click="goBack">返回</i-button>
+    <i-button type="success" v-on:click="goBack('/studyplan/details/' + this.details.PlanId)">返回</i-button>
 }
 
 @section page_script{
@@ -66,8 +63,6 @@
 		var vm = new Vue({
 			el: '#content',
 			data: {
-				//是否有访问权限
-                hasAccess: true,
                 //课程展示字段
                 courseColumns: [
                     { title: 'NO.', key: "Sort", width: 80 },
@@ -138,15 +133,10 @@
 				this.getDetails();
 			},
             methods: {
-                // 返回学习计划
-                goBack() {
-                    location = "/studyplan/details/" + this.details.PlanId;
-                },
 				/**
 				 * 获取学习计划详细信息
 				 */
                 getDetails() {
-                    var _this = this;
                     Ajax.get({
                         url: '/api/studyplan/studingdetails',
                         params: { planId: this.details.PlanId, studentId: this.details.Student.UserId },
@@ -155,18 +145,14 @@
 							if (!data.Error) {
 								this.details = data.Data;
 							} else {
-								this.details == null;
-                                this.$Message.error(data.Message);
+								this.details = null;
 
-                                //权限不足
-                                if (data.Code === ApiResult.NO_ACCESS.toString("name")) {
-                                    _this.hasAccess = false;
-                                }
+								apiError(data.Code, data.Message);
 							}
 						},
                         error: (error) => {
-							this.details == null;
-							this.$Message.error('请求数据失败，请重试！');
+							this.details = null;
+							apiError(null, '请求数据失败，请重试！');
 						}
 					});
 				}
