--- a/TeamCores.Web/Views/User/Add.cshtml
+++ b/TeamCores.Web/Views/User/Add.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 @{
 	ViewData["Title"] = "新增用户";
 }
@@ -73,7 +73,7 @@
 </div>
 
 @section title_actions{
-	<i-button type="success" v-on:click="goList">返回列表</i-button>
+	<i-button type="success" v-on:click="goBack('/user/index')">返回</i-button>
 }
 
 @section page_script{
@@ -183,10 +183,6 @@
 				}
 			},
 			methods: {
-				// 返回列表
-				goList() {
-					location = "/user/index";
-				},
 				// 获取所有权限
 				getPermissions() {
 					Ajax.get({
