--- a/TeamCores.Web/Views/User/Edit.cshtml
+++ b/TeamCores.Web/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
 	ViewData["Title"] = "编辑用户";
 }
 @section style
@@ -72,7 +72,7 @@
 </div>
 
 @section title_actions{
-	<i-button type="success" v-on:click="goList">返回列表</i-button>
+	<i-button type="success" v-on:click="goBack('/user/index')">返回</i-button>
 }
 
 @section page_script{
@@ -183,10 +183,6 @@
 				}
 			},
 			methods: {
-				// 返回列表
-				goList() {
-					location = "/user/index";
-				},
 				// 获取所有权限
 				getPermissions() {
 					Ajax.get({
@@ -298,13 +294,11 @@
 									Permissions: codes.split(',')	//将权限字符串（用英文逗号","分隔）转换为数组
 								};
 							} else {
-								this.$Message.error(data.Message);
+								apiError(data.Code, data.Message);
 							}
                         },
 						error: (error) => {
-							console.log(error);
-							this.$Message.error("编辑操作无法继续!");
-							window.goTo("/user/index", 1000);
+							apiError(null, "加载数据失败，请重试！");
                         }
                     });
 				},
