--- a/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
+++ b/TeamCores.Web/Views/UserStudyPlan/Details.cshtml
@@ -41,7 +41,7 @@
 </template>
 
 @section title_actions{
-    <i-button type="success" v-on:click="goList">返回列表</i-button>
+    <i-button type="success" v-on:click="goBack('/studyplan/index?tab=myplans')">返回</i-button>
 }
 
 @section page_script{
@@ -140,13 +140,9 @@
 				this.details.PlanId = @(Html.Raw("'" + Html.ViewContext.RouteData.Values["id"] + "'"));
 
 				// 获取学习计划详细信息
-				this.getDetails();
+				this.loadDetails();
 			},
             methods: {
-                // 返回列表
-				goList() {
-					goBack("/studyplan/index?tab=myplans");
-                },
                 /**
                  * 跳转到课程详细信息页链接
                  * @@param {Number}  courseId 课程ID
@@ -159,7 +155,7 @@
 				/**
 				 * 获取学习计划详细信息
 				 */
-                getDetails() {
+				loadDetails() {
                     var _this = this;
 					Ajax.get({
                         url: '/api/userstudyplan/details/' + this.details.PlanId,
@@ -168,13 +164,13 @@
 							if (!data.Error) {
 								this.details = data.Data;
 							} else {
-								this.details == null;
-                                this.$Message.error(data.Message);
+								this.details = null;
+								apiError(data.Code, data.Message);
 							}
 						},
                         error: (error) => {
-							this.details == null;
-							this.$Message.error('请求数据失败，请重试！');
+							this.details = null;
+							apiError(null,'请求数据失败，请重试！');
 						}
 					});
 				}
