分页控制处理优化及当前菜单选中状态处理（未完成）

--- a/TeamCores.Web/Views/Course/Index.cshtml
+++ b/TeamCores.Web/Views/Course/Index.cshtml
@@ -180,21 +180,15 @@
 				 */
 				pagerChanged(current) {
 					this.queries["p"] = current;
-					this.reload();
+					reload.call(this);
 				},
 				/**
                  * 搜索
                 */
 				search() {
 					this.queries["p"] = 1;
-					this.reload();
-				},
-				/**
-				 * 重新加载
-				 */
-				reload() {
-					var url = buildUrl(location.href.toString(), this.queries);
-					location.href = url;
+					this.queries["total"] = 0;
+					reload.call(this);
 				},
                 /**
                  * 获取所有的科目
