--- a/TeamCores.Web/Views/Exams/ReviewCenter.cshtml
+++ b/TeamCores.Web/Views/Exams/ReviewCenter.cshtml
@@ -185,14 +185,7 @@
 				 */
 				pagerChanged(current) {
 					this.queries["p"] = current;
-					this.reload();
-				},
-				/**
-				 * 重新加载
-				 */
-				reload() {
-					var url = buildUrl(location.href.toString(), this.queries);
-					location.href = url;
+					reload.call(this);
 				},
 				/**
 				 * 阅卷状态标签选择
@@ -201,7 +194,8 @@
 				statusTabChange(tabName) {
 					this.queries["tab"] = tabName;
 					this.queries["p"] = 1;
-					this.reload();
+					this.queries["total"] = 0;
+					reload.call(this);
 				},
 				/**
 				 * 加载用户考卷数据
