--- a/TeamCores.Web/Views/Questions/Index.cshtml
+++ b/TeamCores.Web/Views/Questions/Index.cshtml
@@ -27,7 +27,7 @@
         </span>
     </div>
     <i-table :columns="gridColumns" :data="gridData"></i-table>
-    <Page class-name="pager" :total="queries.total" :current="queries.p" :paeg-size="queries.size" v-on:on-change="pagerChanged" show-total>
+    <Page class-name="pager" :total="queries.total" :current="queries.p" :page-size="queries.size" v-on:on-change="pagerChanged" show-total>
     </Page>
 </div>
 @section title_actions{
@@ -191,21 +191,15 @@
 				 */
 				pagerChanged(current) {
 					this.queries["p"] = current;
-					this.reload();
+					reload.call(this);
 				},
 				/**
                  * 搜索
                 */
 				search() {
 					this.queries["p"] = 1;
-					this.reload();
-				},
-				/**
-				 * 重新加载
-				 */
-				reload() {
-					var url = buildUrl(location.href.toString(), this.queries);
-					location.href = url;
+					this.queries["total"] = 0;
+					reload.call(this);
 				},
                 
                 /**
