菜单选中状态处理

--- a/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
+++ b/TeamCores.Web/Views/Shared/Components/ModuleNav/Default.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="header">
+<div class="header">
     <div class="logo">E-Learning</div>
     <div class="module-nav">
         <ul>
@@ -14,7 +14,6 @@
         <ul>
             <li>欢迎你：@ViewBag.Username（@ViewBag.UserEmail）</li>
             <li><a asp-controller="home" asp-action="signout">退出</a></li>
-            <li>帮助</li>
         </ul>
     </div>
 </div>
